--- a/package.json
+++ b/package.json
@@ -2,10 +2,34 @@
   "name": "@nerdgeschoss/config",
   "version": "0.0.1",
   "license": "MIT",
-  "devDependencies": {
-    "copy-webpack-plugin": "^4.5.2",
+  "scripts": {
+    "release": "yarn version --patch && git push --tags && yarn publish --non-interactive"
+  },
+  "dependencies": {
+    "@types/jest": "^23.3.13",
+    "autoprefixer": "^9.4.6",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "webpack": "^4.20.2"
+    "jest": "^23.6.0",
+    "js-yaml-loader": "^1.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.16.1",
+    "raw-loader": "^1.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
