--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "prettier": "^1.16.1",
     "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
