--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.4.6",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "cssnano": "^4.1.8",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
