--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "svgo": "^1.1.1",
+    "svgo-loader": "^2.2.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
